confighub/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: traderx-dev
  labels:
    app: database
spec:
  type: ClusterIP
  ports:
  - name: tcp
    port: 18082
    targetPort: 18082
    protocol: TCP
  - name: pg
    port: 18083
    targetPort: 18083
    protocol: TCP
  - name: http
    port: 18084
    targetPort: 18084
    protocol: TCP
  selector:
    app: database
