confighub/base/people-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: people-service
  namespace: traderx-dev
spec:
  selector:
    app: people-service
  ports:
  - port: 18089
    targetPort: 18089
    protocol: TCP
  type: ClusterIP
