confighub/base/web-gui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-gui
  namespace: traderx-dev
spec:
  selector:
    app: web-gui
  ports:
  - port: 18093
    targetPort: 18093
    protocol: TCP
  type: ClusterIP
